# comfyui-compressed-metadata

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: comfyui-compressed-metadata.js
